--- a/application/views/dyh/left_bar.html
+++ b/application/views/dyh/left_bar.html
@@ -1,6 +1,48 @@
-	<div class="top">
-		<div class="col-xs-12">顶部</div>
-	</div>
-	<div class="left">
-		
-	</div>
+	<div class="center">
+		<div class="left">
+			<ul id="expmenu-freebie">
+			<li>
+				<!-- Start Freebie -->
+				<ul class="expmenu">
+					<li>
+						<div class="header">
+							<span class="label" style="background-image: url(<{$base_url}><{$spath}>img/user.png);">Account</span>
+							<span class="arrow up"></span>
+						</div>
+						<ul class="menu">
+							<li><input type="range" name="range" min="0" max="100" value="35" style="width: 100%;" /></li>
+						</ul>
+					</li>
+					<li>
+						<div class="header">
+							<span class="label" style="background-image: url(<{$base_url}><{$spath}>img/messages.png);">Post</span>
+							<span class="arrow up"></span>
+						</div>
+						<ul class="menu">
+							<li title="发布新文章" data-href="articles/new">New Post</li>
+							<li class="selected" title="所有文章" data-href="articles">All Post</li>
+							<li title="分类文章" data-href="articles/category">Category Post</li>
+						</ul>
+					</li>
+					
+					<li>
+						<div class="header">
+							<span class="label" style="background-image: url(<{$base_url}><{$spath}>img/pc.png);">Category</span>
+							<span class="arrow down"></span>
+						</div>
+						<ul class="menu" style="display:none">
+							<li>New Category</li>
+							<li>All Category</li>
+						</ul>
+					</li>
+					<li>
+						<div class="header">
+							<span class="label" style="background-image: url(<{$base_url}><{$spath}>img/search.png);">Search</span>
+						</div>
+					</li>
+				</ul>
+				<!-- End Freebie -->
+			</li>
+		</ul>
+		</div>
+		<div class="right">
