--- a/static/dyh/css/common.css
+++ b/static/dyh/css/common.css
@@ -1,30 +1,60 @@
 body{
 	background-color: #DDF3FF;
 }
-.center{
-	width: 96%;
-	min-height: 630px;
-	margin: 10px 2%;
+#center{
+	margin: 10px 0;
 }
 
-.left{
+#left_wrap{
 	float: left;
-	width:20%;
-	height: 630px;
 	border-radius: 5px;
 	box-shadow: 0 0 10px #333;
 	color: #b1b1b1;
 	background: #e1e1e1;
+	padding-bottom: 10px;
+	margin-bottom: 20px;
 }
 
-.right{
+#right{
 	float:left;
-	width:78%;
-	margin-left: 2%;
-	height: 630px;
+	height: 100%;
+	/*padding-left: 20px;*/
 	/*background-color: #E1E1E1;*/
 	/*box-shadow: 0 0 10px #333;*/
 	/*border-radius: 5px;	*/
+}
+
+.expmenu li {
+	cursor: pointer;
+}
+.breadcrumb{
+	box-shadow: 0 0 7px #333;
+}
+.post-wrap{
+	padding-top: 10px;
+}
+.post-wrap-base{
+	background-color: #f5f5f5;
+	box-shadow: 0 0 10px #333;
+	border-radius: 5px;
+	padding: 5px;
+}
+.post-wrap-content{
+	background-color: #f5f5f5;
+	box-shadow: 0 0 10px #333;
+	border-radius: 5px;
+	margin-top: 20px;
+}
+.post-button{
+	background-color: #f5f5f5;
+	margin-top: 15px;
+	border-radius: 5px;
+	box-shadow:  0 0 5px #333;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+.post-button button{
+	margin-left: 10px;
 }
 
 /** 
@@ -163,3 +193,11 @@ div#content { display: table; margin: 0 auto; padding: 30px; }
 /** 
  * END 左侧导航栏
  */
+
+
+.pd0 {
+	padding: 0;
+}
+.pdr0{
+	padding-right: 0;
+}
