--- a/application/views/dyh/left_bar.html
+++ b/application/views/dyh/left_bar.html
@@ -1,5 +1,5 @@
 	<div class="center">
-		<div class="left">
+		<div class="left col-xs-3 col-md-2">
 			<ul id="expmenu-freebie">
 			<li>
 				<!-- Start Freebie -->
@@ -45,4 +45,4 @@
 			</li>
 		</ul>
 		</div>
-		<div class="right">
+		<div class="right col-xs-9 col-md-10">
