解决本地冲突

--- a/static/dyh/css/common.css
+++ b/static/dyh/css/common.css
@@ -62,7 +62,7 @@ body{
 }
 
 /** 
- * å·¦ä¾§å¯¼èˆªæ 
+ * ×ó²àµ¼º½À¸
  */
 * { font-family: "museo500", "Arial"; font-size: 12px; list-style: none; margin: 0; padding: 0; outline: 0; text-decoration: none; box-sizing: border-box !important; -webkit-box-sizing: border-box !important; -moz-box-sizing: border-box !important; -ms-box-sizing: border-box !important; }
 
@@ -195,7 +195,7 @@ div#content { display: table; margin: 0 auto; padding: 30px; }
     display: none;
 }
 /** 
- * END å·¦ä¾§å¯¼èˆªæ 
+ * END ×ó²àµ¼º½À¸
  */
 
 
