当天最后更新

--- a/application/views/dyh/detail_articles.html
+++ b/application/views/dyh/detail_articles.html
@@ -1,9 +1,11 @@
 <{include "<{$vpath}>/header.html"}>
 <{include "<{$vpath}>/left_bar.html"}>
-	<header id="article_header" class="col-xs-12 breadcrumb http-direct">
-		<span data-href="/">Home</span> &rsaquo; 
-		<span data-href="articles/post">Post</span> &raquo;
-		<span>New Article</span>
+	<header id="article_header">
+		<ol class="breadcrumb http-direct" style="margin-bottom: 5px;">
+			<li><span data-href="/">Home</span></li>
+			<li><span data-href="articles/post">Articles</span></li>
+			<li class="active">Data</li>
+		</ol>
 	</header>
 	<section class="col-xs-12 post-wrap pd0">
 		<form class="form-horizontal post-wrap-base" role="form">
