--- a/application/views/dyh/left_bar.html
+++ b/application/views/dyh/left_bar.html
@@ -32,7 +32,7 @@
 									<span class="arrow up"></span>
 								</div>
 								<ul class="menu" style="">
-									<li title="新增分类" data-href="category/add">New Category</li>
+									<li title="新增分类" data-href="category">New Category</li>
 									<li title="所有分类" data-href="category">All Category</li>
 								</ul>
 							</li>
