--- a/application/views/dyh/all_articles.html
+++ b/application/views/dyh/all_articles.html
@@ -1,25 +1,28 @@
 <{include "<{$vpath}>/header.html"}>
 <{include "<{$vpath}>/left_bar.html"}>
-	<header id="article_header" class="col-xs-12 breadcrumb http-direct">
-		<span data-href="/">Home</span> &rsaquo; 
-		<span data-href="articles/post">Post</span> &raquo;
-		<span>All Article</span>
+	<header id="article_header">
+		<ol class="breadcrumb http-direct" style="margin-bottom: 5px;">
+			<li><span data-href="/">Home</span></li>
+			<li><span data-href="articles/post">Articles</span></li>
+			<li class="active">Data</li>
+		</ol>
 	</header>
 	<section class="col-xs-12 post-wrap pd0">
 		<div class="post-wrap-base">
 			<div class="form-group">
-				<label for="postcontent" class="col-sm-1 control-label">Categorys:</label>
-			    <div class="col-sm-10">
-			    	<div class="col-xs-3 pd0">
-			    		<select class="form-control">
-							<option>Category</option>
-							<option>2</option>
-							<option>3</option>
-							<option>4</option>
-							<option>5</option>
-						</select>
-			    	</div>
-			    </div>
+			    <div class="dropdown clearfix">
+					<button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuDivider" data-toggle="dropdown" aria-expanded="false">Dropdown
+						<span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenuDivider">
+						<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated link</a></li>
+						<li role="presentation" class="divider"></li>
+						<li role="presentation"><a role="menuitem" tabindex="-1" href="#">&nbsp;&nbsp;&nbsp;&nbsp;Action</a></li>
+						<li role="presentation"><a role="menuitem" tabindex="-1" href="#">&nbsp;&nbsp;&nbsp;&nbsp;Another action</a></li>
+						<li role="presentation"><a role="menuitem" tabindex="-1" href="#">&nbsp;&nbsp;&nbsp;&nbsp;Something else here</a></li>
+						
+					</ul>
+				</div>
 			</div>
 			<table class="table table-hover bg-white">
 				<thead>
@@ -34,7 +37,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<{assign var="loop" value="19"}>　　
+					<{assign var="loop" value="17"}>　　
 				　　<{section name="loop" loop=$loop}>				　　
 				　　<tr>
 						<td><{$smarty.section.loop.index}></td>
@@ -49,17 +52,17 @@
 				</tbody>
 			</table> 
 			<div class="form-group col-md-offset-4 pages">
-				<span>First</span>
-				<span>Previous</span>
-				<span>1</span>
-				<span>2</span>
-				<span>3</span>
-				<span>...</span>
-				<span>21</span>
-				<span>22</span>
-				<span>23</span>
-				<span>Next</span>
-				<span>Last</span>
+				<nav>
+					<ul class="pagination">
+						<li class="disabled"><a href="#"><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
+						<li><a href="#">1</a></li>
+						<li><a href="#">2</a></li>
+						<li class="active"><a href="#">3</a></li>
+						<li><a href="#">4</a></li>
+						<li><a href="#">5</a></li>
+						<li><a href="#"><span aria-hidden="true">&raquo;</span><span class="sr-only">Next</span></a></li>
+					</ul>
+				</nav>
 			</div>
 		</div>
 	</section>
