--- a/application/views/dyh/left_bar.html
+++ b/application/views/dyh/left_bar.html
@@ -28,12 +28,12 @@
 							
 							<li>
 								<div class="header">
-									<span class="label" style="background-image: url(<{$base_url}><{$spath}>img/pc.png);">Category</span>
+									<span class="label" style="background-image: url(<{$base_url}><{$spath}>img/pc.png);">Categorys & Tags</span>
 									<span class="arrow up"></span>
 								</div>
 								<ul class="menu" style="">
-									<li title="新增分类" data-href="category">New Category</li>
-									<li title="所有分类" data-href="category">All Category</li>
+									<li title="所有分类" data-href="category">Category</li>
+									<li title="所有标签" data-href="tags">Tags</li>
 								</ul>
 							</li>
 							<li>
