--- a/application/views/dyh/header.html
+++ b/application/views/dyh/header.html
@@ -5,10 +5,10 @@
 		<meta name="keywords" content="" />
 		<meta name="description" content="" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<link href="<{$base_url}><{$spath}>dist/css/bootstrap.css" rel="stylesheet">
+		<link href="<{$base_url}>static/dist/css/bootstrap.css" rel="stylesheet">
 		<link href="<{$base_url}><{$spath}>css/common.css" rel="stylesheet">		
 		<script type="text/javascript" src="<{$base_url}><{$spath}>js/jquery-2.1.3.min.js"></script>
-		<script type="text/javascript" src="<{$base_url}><{$spath}>dist/js/bootstrap.js"></script>
+		<script type="text/javascript" src="<{$base_url}>static/dist/js/bootstrap.js"></script>
 		<script type="text/javascript" src="<{$base_url}><{$spath}>js/jquery.tools.min.js"></script>
 		<script type="text/javascript" src="<{$base_url}><{$spath}>js/main.js"></script>
 	</head>
