--- a/application/views/dyh/tags.html
+++ b/application/views/dyh/tags.html
@@ -10,7 +10,7 @@
 	<section class="col-xs-12 post-wrap-base pd0" id="category_wrap">
 		<div class="col-xs-12 pdtb10">
 			<div class="col-xs-12 col-md-6 add-alter-category">
-				<div class="glyphicon glyphicon-plus label-title"> <span style="font-size:18px">Add Category</span></div>
+				<div class="glyphicon glyphicon-plus label-title"> <span style="font-size:18px">Add Tags</span></div>
 				<form class="form-horizontal" role="form">
 					<div class="form-group">
 					    <label for="category_name" class="col-sm-2 control-label">Name</label>
@@ -43,7 +43,7 @@
 					</div>
 				</form>
 				
-				<div class="glyphicon glyphicon-edit label-title"> <span style="font-size:18px">Alter Category</span></div>	
+				<div class="glyphicon glyphicon-edit label-title"> <span style="font-size:18px">Alter Tags</span></div>	
 				<form class="form-horizontal" role="form">
 					<div class="form-group">
 					    <label for="category_name" class="col-sm-2 control-label">Name</label>
@@ -77,7 +77,7 @@
 				</form>
 			</div>
 			<div class="col-xs-12 col-md-6">
-				<div class="glyphicon glyphicon-th-list label-title"> <span style="font-size:18px">All Category</span></div>	
+				<div class="glyphicon glyphicon-th-list label-title"> <span style="font-size:18px">All Tags</span></div>	
 				<div class="all-category">
 					<ul id="expmenu-freebie">
 						<li>
