--- a/application/views/article.html
+++ b/application/views/article.html
@@ -39,6 +39,11 @@
 		<div id="left_placeholder" class="col-xs-12 col-sm-4"></div>
 		<div class="col-xs-12 col-sm-8" id="right">
 			<section class="col-xs-12 article">
+				<ol class="breadcrumb">
+					<li><a href="<{$base_url}>" title="首页">首页</a></li>
+					<li><a href="" title="PHP">PHP</a></li>
+					<li class="active">西南地区持续雨雪 京津冀等地有轻度霾</li>
+				</ol>
 				<header class="col-xs-12 article-header">
 					<h1>西南地区持续雨雪 京津冀等地有轻度霾</h1>
 				</header>
