--- a/application/views/home.html
+++ b/application/views/home.html
@@ -38,6 +38,11 @@
 		</div>
 		<div id="left_placeholder" class="col-xs-12 col-sm-4"></div>
 		<div class="col-xs-12 col-sm-8" id="right">
+			<ol class="breadcrumb list-breadcrumb">
+				<li><a href="<{$base_url}>" title="首页">首页</a></li>
+				<li><a href="" title="PHP">PHP</a></li>
+				<li class="active">西南地区持续雨雪 京津冀等地有轻度霾</li>
+			</ol>
 			<div class="col-xs-12 cell">
 				<div class="col-xs-12 cell-post">
 					<h2 class="cell-top"><a href="<{$base_url}>article/1">通过下表可以详细查看 Bootstrap </a></h2>
