--- a/application/views/article.html
+++ b/application/views/article.html
@@ -23,11 +23,11 @@
 			</div>
 			<div class="col-xs-10 col-xs-offset-1">
 				<ul class="col-xs-12 menu">
-					<li title="首页">首页</li>
-					<li title="PHP">PHP</li>
-					<li title="MySQL">MySQL</li>
-					<li title="JS">JS</li>
-					<li title="其他">其他</li>
+					<a href="<{$base_url}>"><li title="首页">首页</li></a></a>
+					<a href="<{$base_url}>category/php"><li title="PHP">PHP</li></a>
+					<a href="<{$base_url}>category/mysql"><li title="MySQL">MySQL</li></a>
+					<a href="<{$base_url}>category/js"><li title="JS">JS</li></a>
+					<a href="<{$base_url}>category/other"><li title="其他">其他</li></a>
 				</ul>
 			</div>
 			<div class="col-xs-12 line"></div>
