--- a/application/views/home.html
+++ b/application/views/home.html
@@ -23,11 +23,11 @@
 			</div>
 			<div class="col-xs-10 col-xs-offset-1">
 				<ul class="col-xs-12 menu">
-					<li title="首页">首页</li>
-					<li title="PHP">PHP</li>
-					<li title="MySQL">MySQL</li>
-					<li title="JS">JS</li>
-					<li title="其他">其他</li>
+					<a href="<{$base_url}>"><li title="首页">首页</li></a></a>
+					<a href="<{$base_url}>category/php"><li title="PHP">PHP</li></a>
+					<a href="<{$base_url}>category/mysql"><li title="MySQL">MySQL</li></a>
+					<a href="<{$base_url}>category/js"><li title="JS">JS</li></a>
+					<a href="<{$base_url}>category/other"><li title="其他">其他</li></a>
 				</ul>
 			</div>
 			<div class="col-xs-12 line"></div>
@@ -40,8 +40,7 @@
 		<div class="col-xs-12 col-sm-8" id="right">
 			<ol class="breadcrumb list-breadcrumb">
 				<li><a href="<{$base_url}>" title="首页">首页</a></li>
-				<li><a href="" title="PHP">PHP</a></li>
-				<li class="active">西南地区持续雨雪 京津冀等地有轻度霾</li>
+				<li>PHP</li>
 			</ol>
 			<div class="col-xs-12 cell">
 				<div class="col-xs-12 cell-post">
