--- a/static/comm/css/main.css
+++ b/static/comm/css/main.css
@@ -154,8 +154,13 @@
 	list-style: none;
 	padding-left: 30px;
 	height: 40px;
-	line-height: 40px;
+	line-height: 40px;	
+}
+.menu a{
 	color: #FFF;
+}
+.menu a:hover{
+	text-decoration: none;
 }
 .menu li:hover{
 	opacity: 0.7;
