--- a/application/views/dyh/header.html
+++ b/application/views/dyh/header.html
@@ -7,7 +7,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link href="<{$base_url}>static/dist/css/bootstrap.css" rel="stylesheet">
 		<link href="<{$base_url}><{$spath}>css/common.css" rel="stylesheet">		
-		<script type="text/javascript" src="<{$base_url}><{$spath}>js/jquery-2.1.3.min.js"></script>
+		<script type="text/javascript" src="<{$base_url}>static/comm/js/jquery-2.1.3.min.js"></script>
 		<script type="text/javascript" src="<{$base_url}>static/dist/js/bootstrap.js"></script>
 		<script type="text/javascript" src="<{$base_url}><{$spath}>js/jquery.tools.min.js"></script>
 		<script type="text/javascript" src="<{$base_url}><{$spath}>js/main.js"></script>
