--- a/application/views/dyh/left_bar.html
+++ b/application/views/dyh/left_bar.html
@@ -47,4 +47,5 @@
 				</ul>
 			</div>
 		</div>
+		<div id="left_placeholder" class="col-xs-12 col-md-3 col-lg-2"></div>
 		<div id="right" class="col-xs-12 col-md-9 col-lg-10">
