--- a/application/views/dyh/tags.html
+++ b/application/views/dyh/tags.html
@@ -9,7 +9,7 @@
 	</header>
 	<section class="col-xs-12 post-wrap-base pd0" id="category_wrap">
 		<div class="col-xs-12 pdtb10">
-			<div class="col-xs-12 col-md-6 add-alter-category">
+			<div class="col-xs-12 col-md-6">
 				<div class="glyphicon glyphicon-plus label-title"> <span style="font-size:18px">Add Tags</span></div>
 				<form class="form-horizontal" role="form">
 					<div class="form-group">
@@ -76,36 +76,18 @@
 					</div>
 				</form>
 			</div>
-			<div class="col-xs-12 col-md-6">
+			<div class="col-xs-12 col-md-6 add-alter-category">
 				<div class="glyphicon glyphicon-th-list label-title"> <span style="font-size:18px">All Tags</span></div>	
 				<div class="all-category">
-					<ul id="expmenu-freebie">
-						<li>
-							<ul class="expmenu">
-								<li>
-									<div class="header">
-										<span class="label">Post</span>
-										<span class="arrow up"></span>
-									</div>
-									<ul class="menu">
-										<li title="点击修改">New Post</li>
-										<li class="selected" title="点击修改">All Post</li>
-										<li title="点击修改">Category Post</li>
-									</ul>
-								</li>
-								<li>
-									<div class="header">
-										<span class="label">Category</span>
-										<span class="arrow up"></span>
-									</div>
-									<ul class="menu" style="">
-										<li title="点击修改">New Category</li>
-										<li title="点击修改">All Category</li>
-									</ul>
-								</li>
-							</ul>
-						</li>
-					</ul>
+					<div class="all-category">
+						<div class="list-group">
+							<a href="#" class="list-group-item active" title="点击修改">Cras justo odio</a>
+							<a href="#" class="list-group-item" title="点击修改">Dapibus ac facilisis in</a>
+							<a href="#" class="list-group-item" title="点击修改">Morbi leo risus</a>
+							<a href="#" class="list-group-item active" title="点击修改">Porta ac consectetur ac</a>
+							<a href="#" class="list-group-item" title="点击修改">Vestibulum at eros</a>
+						</div>					
+					</div>
 				</div>
 			</div>
 		</div>
