--- a/static/dyh/css/common.css
+++ b/static/dyh/css/common.css
@@ -14,6 +14,14 @@ body{
 	padding-bottom: 10px;
 	margin-bottom: 20px;
 }
+@media (min-width: 900px) {
+	.left{
+		position: fixed;
+	}
+	#left_placeholder{
+		height: 100px;
+	}
+}
 
 #right{
 	float:left;
@@ -79,7 +87,7 @@ body{
 
 @media (min-width: 992px) {
 	.add-alter-category{
-		border-right: 2px solid #abcdef;
+		border-left: 2px solid #abcdef;
 	}
 }
 .label-title{
