--- a/application/views/dyh/left_bar.html
+++ b/application/views/dyh/left_bar.html
@@ -20,9 +20,9 @@
 									<span class="arrow up"></span>
 								</div>
 								<ul class="menu">
-									<li title="发布新文章" data-href="articles/post">New Post</li>
-									<li class="selected" title="所有文章" data-href="articles">All Post</li>
-									<li title="分类文章" data-href="articles/category">Category Post</li>
+									<li title="发布新文章" data-href="<{$index_page}>dyh/articles/post">New Post</li>
+									<li class="selected" title="所有文章" data-href="<{$index_page}>dyh/articles">All Post</li>
+									<li title="分类文章" data-href="<{$index_page}>dyh/articles/category">Category Post</li>
 								</ul>
 							</li>
 							
@@ -32,8 +32,8 @@
 									<span class="arrow up"></span>
 								</div>
 								<ul class="menu" style="">
-									<li title="所有分类" data-href="category">Category</li>
-									<li title="所有标签" data-href="tags">Tags</li>
+									<li title="所有分类" data-href="<{$index_page}>dyh/category">Category</li>
+									<li title="所有标签" data-href="<{$index_page}>dyh/tags">Tags</li>
 								</ul>
 							</li>
 							<li>
