--- a/application/views/home.html
+++ b/application/views/home.html
@@ -24,10 +24,10 @@
 			<div class="col-xs-10 col-xs-offset-1">
 				<ul class="col-xs-12 menu">
 					<a href="<{$base_url}>"><li title="首页">首页</li></a></a>
-					<a href="<{$base_url}>category/php"><li title="PHP">PHP</li></a>
-					<a href="<{$base_url}>category/mysql"><li title="MySQL">MySQL</li></a>
-					<a href="<{$base_url}>category/js"><li title="JS">JS</li></a>
-					<a href="<{$base_url}>category/other"><li title="其他">其他</li></a>
+					<a href="<{$base_url}><{$index_page}>category/php"><li title="PHP">PHP</li></a>
+					<a href="<{$base_url}><{$index_page}>category/mysql"><li title="MySQL">MySQL</li></a>
+					<a href="<{$base_url}><{$index_page}>category/js"><li title="JS">JS</li></a>
+					<a href="<{$base_url}><{$index_page}>category/other"><li title="其他">其他</li></a>
 				</ul>
 			</div>
 			<div class="col-xs-12 line"></div>
@@ -44,7 +44,7 @@
 			</ol>
 			<div class="col-xs-12 cell">
 				<div class="col-xs-12 cell-post">
-					<h2 class="cell-top"><a href="<{$base_url}>article/1">通过下表可以详细查看 Bootstrap </a></h2>
+					<h2 class="cell-top"><a href="<{$base_url}><{$index_page}>article/1">通过下表可以详细查看 Bootstrap </a></h2>
 					<div class="cell-center"><p>栅格系统用于通过一系列的行（row）与列（column）的组合来创建页面布局，你的内容就可以放入这些创建好的布局中。下面就介绍一下 Bootstrap 栅格系统的工作原理：</p></div>
 				</div>
 				<div class="col-xs-12 cell-bottom">
@@ -54,7 +54,7 @@
 			</div>
 			<div class="col-xs-12 cell">
 				<div class="col-xs-12 cell-post">
-					<h2 class="cell-top"><a href="<{$base_url}>article/1">通过下表可以详细查看 Bootstrap </a></h2>
+					<h2 class="cell-top"><a href="<{$base_url}><{$index_page}>article/1">通过下表可以详细查看 Bootstrap </a></h2>
 					<div class="cell-center"><p>栅格系统用于通过一系列的行（row）与列（column）的组合来创建页面布局，你的内容就可以放入这些创建好的布局中。下面就介绍一下 Bootstrap 栅格系统的工作原理：</p></div>
 				</div>
 				<div class="col-xs-12 cell-bottom">
@@ -64,7 +64,7 @@
 			</div>
 			<div class="col-xs-12 cell">
 				<div class="col-xs-12 cell-post">
-					<h2 class="cell-top"><a href="<{$base_url}>article/1">通过下表可以详细查看 Bootstrap </a></h2>
+					<h2 class="cell-top"><a href="<{$base_url}><{$index_page}>article/1">通过下表可以详细查看 Bootstrap </a></h2>
 					<div class="cell-center"><p>栅格系统用于通过一系列的行（row）与列（column）的组合来创建页面布局，你的内容就可以放入这些创建好的布局中。下面就介绍一下 Bootstrap 栅格系统的工作原理：</p></div>
 				</div>
 				<div class="col-xs-12 cell-bottom">
@@ -74,7 +74,7 @@
 			</div>
 			<div class="col-xs-12 cell">
 				<div class="col-xs-12 cell-post">
-					<h2 class="cell-top"><a href="<{$base_url}>article/1">通过下表可以详细查看 Bootstrap </a></h2>
+					<h2 class="cell-top"><a href="<{$base_url}><{$index_page}>article/1">通过下表可以详细查看 Bootstrap </a></h2>
 					<div class="cell-center"><p>栅格系统用于通过一系列的行（row）与列（column）的组合来创建页面布局，你的内容就可以放入这些创建好的布局中。下面就介绍一下 Bootstrap 栅格系统的工作原理：</p></div>
 				</div>
 				<div class="col-xs-12 cell-bottom">
