--- a/static/dyh/css/common.css
+++ b/static/dyh/css/common.css
@@ -48,6 +48,7 @@ body{
 	border-radius: 5px;
 	padding: 5px;
 	border: 1px solid #BCBCBC;
+	font-family: "Microsoft YaHei";
 }
 .post-wrap-content{
 	background-color: #f5f5f5;
