--- a/application/views/dyh/detail_articles.html
+++ b/application/views/dyh/detail_articles.html
@@ -4,51 +4,60 @@
 		<ol class="breadcrumb http-direct" style="margin-bottom: 5px;">
 			<li><span data-href="/">Home</span></li>
 			<li><span data-href="articles/post">Articles</span></li>
-			<li class="active">Data</li>
+			<li class="active"><{$article.title}></li>
 		</ol>
 	</header>
 	<section class="col-xs-12 post-wrap pd0">
+		<input type="hidden" id="article_id" value="<{$article.ID}>">
 		<form class="form-horizontal post-wrap-base" role="form">
 			<div class="form-group">
 			    <label for="posttitle" class="col-sm-2 control-label">Title</label>
 			    <div class="col-sm-10">
-			    	<input type="text" class="form-control" id="posttitle" placeholder="Title">
+			    	<input type="text" class="form-control" id="posttitle" placeholder="Title" value="<{$article.title}>">
 			    </div>
 			</div>
-			<div class="form-group has-success has-feedback">
+			<div class="form-group has-default has-feedback">
 			    <label for="posturl" class="col-sm-2 control-label">URL</label>
 			    <div class="col-sm-10">
-			    	<input type="text" class="form-control" id="posturl" aria-describedby="inputSuccess2Status" placeholder="URL">
+			    	<input type="text" class="form-control" id="posturl" value="<{$article.url_title}>" aria-describedby="inputSuccess2Status" placeholder="URL">
 					<span class="glyphicon glyphicon-ok form-control-feedback" aria-hidden="true"></span>
 					<span id="inputSuccess2Status" class="sr-only">(success)</span>
 			    </div>
 			</div>
 			<div class="form-group">
-			    <label for="postcontent" class="col-sm-2 control-label">Description</label>
+			    <label for="postdesc" class="col-sm-2 control-label">Description</label>
 			    <div class="col-sm-10">
-			    	<textarea class="form-control" rows="2" id="postcontent" placeholder="Description"></textarea>
+			    	<textarea class="form-control" rows="2" id="postdesc" placeholder="Description"><{$article.description}></textarea>
 			    </div>
 			</div>
 			<div class="form-group">
-			    <label for="postcontent" class="col-sm-2 control-label">Category & Tags</label>
+			    <label for="postcate" class="col-sm-2 control-label">Category & Tags</label>
 			    <div class="col-sm-10">
 			    	<div class="col-xs-4 pd0">
-			    		<select class="form-control">
-							<option>Category</option>
-							<option>2</option>
-							<option>3</option>
-							<option>4</option>
-							<option>5</option>
+			    		<select class="form-control" id="postcate">
+			    			<{foreach from=$category name=p item=p}>
+			    				<option value="<{$p.ID}>" <{if $p.ID == $article.category}>selected<{/if}>><{$p.Name}></option>
+			    				<{if isset($p.Child)}>
+									<{foreach from=$p.Child name=c item=c}>
+										<option value="<{$c.ID}>" <{if $c.ID == $article.category}>selected<{/if}>>&nbsp;&nbsp;&nbsp;&nbsp;<{$c.Name}></option>
+									<{/foreach}>
+			    				<{/if}>
+			    			<{/foreach}>
 						</select>
 			    	</div>
-			    	<div class="col-xs-8 pdr0">
-			    		<input type="text" class="form-control" placeholder="Input Tags">
+			    	<div class="col-xs-4 pdr0">
+			    		<input type="text" id="add_tag" class="form-control" placeholder="Separated by ',' Enter to Save" value="" title="逗号隔开,Enter保存">			    		
+			    	</div>
+			    	<div class="col-xs-4 pdr0 tag-wrap">
+			    		<{foreach from=$tags name=t item=t}>
+			    			<span class="label label-primary tag-label" title="点击删除" data-tid="<{$t.tid}>"><{$t.tname}></span>
+			    		<{/foreach}>
 			    	</div>
 			    </div>
 			</div>
 		</form>
 		<div class="col-xs-12 pd0 post-wrap-content">
-			<script id="container" name="content" type="text/plain">这里写你的初始化内容</script>
+			<script id="container" name="content" type="text/plain"><{$article.content}></script>
 			<script type="text/javascript" src="<{$base_url}><{$spath}>ueditor/ueditor.config.js"></script>
 		    <script type="text/javascript" src="<{$base_url}><{$spath}>ueditor/ueditor.all.js"></script>
 		    <script type="text/javascript">
@@ -57,8 +66,8 @@
 		</div>
 		<div class="col-xs-12 post-button">
 			<span class="col-xs-5">&nbsp;</span>
-			<button type="button" class="btn btn-primary col-md-1" title="保存为草稿">Save</button>
-			<button type="button" class="btn btn-primary col-md-1" title="发布">Post</button>
+			<button type="button" id="article_save" class="btn btn-primary col-md-1" title="保存">Save</button>
+			<button type="button" id="article_post" class="btn btn-primary col-md-1" title="发布">Post</button>
 		</div>
 	</section>
 <{include "<{$vpath}>/footer.html"}>
