--- a/application/views/dyh/categroy.html
+++ b/application/views/dyh/categroy.html
@@ -48,81 +48,54 @@
 					<div class="form-group">
 					    <label for="category_name" class="col-sm-2 control-label">Name</label>
 					    <div class="col-sm-8">
-					    	<input type="text" class="form-control" id="category_name" placeholder="Category Name">
+					    	<input type="text" class="form-control" id="category_name_alt" placeholder="Category Name">
+					    	<input type="hidden" id="category_id_alt" value="" />
 					    </div>
 					</div>
 					<div class="form-group">
 					    <label for="category_name" class="col-sm-2 control-label">Url Alis</label>
 					    <div class="col-sm-8">
-					    	<input type="text" class="form-control" id="category_name" placeholder="Url">
+					    	<input type="text" class="form-control" id="category_url_alt" placeholder="Url">
 					    </div>
 					</div>
 					<div class="form-group">
 					    <label for="postcontent" class="col-sm-2 control-label">Parent</label>
 					    <div class="col-sm-10">
 					    	<div class="col-xs-4 pd0">
-					    		<select class="form-control">
-									<option>Null</option>
-									<option>2</option>
-									<option>3</option>
-									<option>4</option>
-									<option>5</option>
+					    		<select class="form-control" id="category_parent_alt" data-org="0">
+									<option value="0">Null</option>
+									<{foreach from=$category name=cate item=cate}>
+											<option value='<{$cate.ID}>'><{$cate.Name}></option>
+											<{if isset($cate.Child)}>
+											<{foreach from=$cate.Child name=c_cate item=c_cate}>
+											<option value='<{$c_cate.ID}>'>&nbsp;&nbsp;&nbsp;&nbsp;<{$c_cate.Name}></option>
+											<{/foreach}>
+											<{/if}>
+									<{/foreach}>
 								</select>
 					    	</div>
+					    	<div class="col-xs-6">*该选项不会保存到数据库</div>
 					    </div>
 					</div>
 					<div class="col-xs-12 pd0">
-						<button type="button" class="btn btn-primary pull-right" title="修改">Alter</button>
+						<button type="button" class="btn btn-primary pull-right" title="修改" id="alter_category">Alter</button>
 					</div>
 				</form>
 			</div>
 			<div class="col-xs-12 col-md-6 add-alter-category">
 				<div class="glyphicon glyphicon-th-list label-title"> <span style="font-size:18px">All Category</span></div>	
+				<{foreach from=$category name=cate item=cate}>
 				<div class="all-category">
 					<div class="list-group">
-						<a href="#" class="list-group-item active" title="点击修改">Cras justo odio</a>
-						<a href="#" class="list-group-item" title="点击修改">Dapibus ac facilisis in</a>
-						<a href="#" class="list-group-item" title="点击修改">Morbi leo risus</a>
-						<a href="#" class="list-group-item" title="点击修改">Porta ac consectetur ac</a>
-						<a href="#" class="list-group-item" title="点击修改">Vestibulum at eros</a>
+						<a href="#" class="list-group-item active category-li" title="点击修改" data-id="<{$cate.ID}>"><{$cate.Name}></a>
+						<{if isset($cate.Child)}>
+						<{foreach from=$cate.Child name=c_cate item=c_cate}>
+						<a href="#" class="list-group-item category-li" title="点击修改" data-id="<{$c_cate.ID}>"><{$c_cate.Name}></a>
+						<{/foreach}>
+						<{/if}>
 					</div>					
 				</div>
-				<div class="all-category">
-					<div class="list-group">
-						<a href="#" class="list-group-item active">Cras justo odio</a>
-						<a href="#" class="list-group-item">Dapibus ac facilisis in</a>
-						<a href="#" class="list-group-item">Morbi leo risus</a>
-						<a href="#" class="list-group-item">Porta ac consectetur ac</a>
-						<a href="#" class="list-group-item">Vestibulum at eros</a>
-					</div>					
-				</div>
-				<div class="all-category">
-					<div class="list-group">
-						<a href="#" class="list-group-item active">Cras justo odio</a>
-						<a href="#" class="list-group-item">Dapibus ac facilisis in</a>
-						<a href="#" class="list-group-item">Morbi leo risus</a>
-						<a href="#" class="list-group-item">Porta ac consectetur ac</a>
-						<a href="#" class="list-group-item">Vestibulum at eros</a>
-					</div>					
-				</div>
-				<div class="all-category">
-					<div class="list-group">
-						<a href="#" class="list-group-item active">Cras justo odio</a>
-						<a href="#" class="list-group-item">Dapibus ac facilisis in</a>
-						<a href="#" class="list-group-item">Morbi leo risus</a>
-						<a href="#" class="list-group-item">Porta ac consectetur ac</a>
-						<a href="#" class="list-group-item">Vestibulum at eros</a>
-					</div>					
-				</div>
-				<div class="all-category">
-					<div class="list-group">
-						<a href="#" class="list-group-item active">Cras justo odio</a>
-						<a href="#" class="list-group-item">Dapibus ac facilisis in</a>
-						<a href="#" class="list-group-item">Morbi leo risus</a>
-						<a href="#" class="list-group-item">Porta ac consectetur ac</a>
-						<a href="#" class="list-group-item">Vestibulum at eros</a>
-					</div>					
-				</div>
+				<{/foreach}>
 			</div>
 		</div>
 	</section>
