--- a/application/views/dyh/categroy.html
+++ b/application/views/dyh/categroy.html
@@ -15,25 +15,29 @@
 					<div class="form-group">
 					    <label for="category_name" class="col-sm-2 control-label">Name</label>
 					    <div class="col-sm-8">
-					    	<input type="text" class="form-control" id="category_name" placeholder="Category Name">
+					    	<input type="text" class="form-control" id="category_name_add" placeholder="Category Name">
 					    </div>
 					</div>
 					<div class="form-group">
 					    <label for="category_name" class="col-sm-2 control-label">Url Alis</label>
 					    <div class="col-sm-8">
-					    	<input type="text" class="form-control" id="category_name" placeholder="Url">
+					    	<input type="text" class="form-control" id="category_url_add" placeholder="Url">
 					    </div>
 					</div>
 					<div class="form-group">
 					    <label for="postcontent" class="col-sm-2 control-label">Parent</label>
 					    <div class="col-sm-10">
 					    	<div class="col-xs-4 pd0">
-					    		<select class="form-control">
-									<option>Null</option>
-									<option>2</option>
-									<option>3</option>
-									<option>4</option>
-									<option>5</option>
+					    		<select class="form-control" id="category_parent_add">
+									<option value="0">Null</option>
+									<{foreach from=$category name=cate item=cate}>
+											<option value='<{$cate.ID}>'><{$cate.Name}></option>
+											<{if isset($cate.Child)}>
+											<{foreach from=$cate.Child name=c_cate item=c_cate}>
+											<option value='<{$c_cate.ID}>'>&nbsp;&nbsp;&nbsp;&nbsp;<{$c_cate.Name}></option>
+											<{/foreach}>
+											<{/if}>
+									<{/foreach}>
 								</select>
 					    	</div>
 					    </div>
