--- a/static/dyh/css/common.css
+++ b/static/dyh/css/common.css
@@ -258,3 +258,10 @@ div#content { display: table; margin: 0 auto; padding: 30px; }
 .tag-label:hover{
 	background-color: #d9534f;
 }
+.login-form {
+	background-color: #eceff1;
+	border-radius: 6px;
+	padding: 24px 23px 20px;
+	box-shadow: 0 0 20px #AAA;
+	
+}
