--- a/application/views/dyh/all_articles.html
+++ b/application/views/dyh/all_articles.html
@@ -46,7 +46,7 @@
 						<td>Mark</td>
 						<td>
 							<div class="btn-group btn-group-xs" role="group" aria-label="Operation group">
-								<button type="button" class="btn btn-primary" title="编辑文章">&nbsp;Edit&nbsp;</button>
+								<button type="button" class="btn btn-primary article-edit" title="编辑文章" data-href="<{$index_page}>dyh/articles/detail/<{$article.aid}>">&nbsp;Edit&nbsp;</button>
 							<div class="btn-group btn-group-xs" role="group" aria-label="Operation group">
 								<button type="button" class="btn btn-danger" title="删除文章">Delete</button>
 							<div class="btn-group btn-group-xs" role="group" aria-label="Operation group">
